# silence-ia-backend

./: .gitignore  passenger_wsgi.py  pyproject.toml  requirements.txt  seed_admin.py
app/: database.py  main.py
app/core/: config.py  logging.py
app/models/: session.py  user.py
app/repositories/: session.py  user.py
app/routers/: analyze.py  auth.py  history.py  transcribe.py  users.py
app/schemas/: auth.py  session.py  user.py
app/services/: analyze.py  auth.py  password.py  session.py  token.py  user.py
tests/: conftest.py  test_analyze.py  test_auth.py  test_history.py  test_users.py
